--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <h1 class="title">World Capitals</h1>
         <div>
             <p>
-                In this page, you will be quizzed about the capital cities of countries all around the world
+                In this page, you will be quizzed about the capital cities of countries all around the world.
             </p>
         </div>
-        <div class="center-container">
+        <div class="center-container" id="game">
             <div id="country-display">
                 *pais*
             </div>
@@ -22,13 +22,11 @@
                 <button onclick="submit()">submmit</button>
                 <button onclick="getCountry()">skip</button>
             </div>
-            <div>
-
+            <div id="score">
+                score: 0
             </div>
         </div>
-        
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygULcmljayBhc3RsZXk%3D">Learn more about this project</a>
-        
         <script src="src/js/index.js"></script>
     </body>
 </html>
