--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" type="text/css" href="src/css/index.css">
     </head>
     <body>
-        <h1 class="title">World Capitals</h1>
-        <div>
+        <div class="block">
+            <h1 class="title">World Capitals</h1>
             <p>
                 In this page, you will be quizzed about the capital cities of countries all around the world.
             </p>
         </div>
-        <div class="center-container" id="game">
+        <div class="block" id="game">
             <div id="country-display">
                 *pais*
             </div>
@@ -26,7 +26,7 @@
                 score: 0
             </div>
         </div>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygULcmljayBhc3RsZXk%3D">Learn more about this project</a>
+        <a class="center" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygULcmljayBhc3RsZXk%3D">Learn more about this project</a>
         <script src="src/js/index.js"></script>
     </body>
 </html>
